Refactor CSS variables for color definitions in root.css

--- a/template/style/css/global/root.css
+++ b/template/style/css/global/root.css
@@ -1,6 +1,5 @@
 :root {
-  --blue: rgb(0, 119, 255);
-  --blue-hover: rgb(47, 144, 255);
-  --red: rgb(255, 0, 140);
-  --red-hover: rgb(255, 51, 163);
+  --red: red;
+  --green: --green;
+  --blue: blue;
 }
