Add project and contact sections to index.html; update expertise styles and navigation padding

--- a/hardric portfolio/style/css/project.css
+++ b/hardric portfolio/style/css/project.css
@@ -1,4 +1,4 @@
-.expertise {
+.project {
   height: 100vh;
 
   display: flex;
@@ -13,19 +13,17 @@
   overflow: auto;
 }
 
-.expertise :where(.heading1) {
+.project :where(.heading1) {
   font-size: 70px;
 }
-.expertise :where(.skills-list) {
+.project :where(.project-list) {
   display: grid;
   grid-template-columns: repeat(2, 500px);
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-areas:
-    "box-1 box-2"
-    "box-3 box-4";
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-areas: "box-1 box-2";
   grid-gap: 1rem;
 }
-.expertise :where(.skills-list) li {
+.project :where(.project-list) li {
   background-color: white;
   border-radius: 0.5rem;
   box-shadow: var(--boxsh);
@@ -38,23 +36,19 @@
 }
 
 @media screen and (max-width: 1070px) {
-  .expertise :where(.skills-list) {
+  .project :where(.project-list) {
     grid-template-columns: repeat(1, 500px);
-    grid-template-rows: repeat(1, 1fr);
     grid-template-areas:
       "box-1"
-      "box-2"
-      "box-3"
-      "box-4";
+      "box-2";
   }
 }
 @media screen and (max-width: 570px) {
-  .expertise :where(.skills-list) {
+  .project :where(.project-list) {
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
   }
 
-  .expertise :where(.heading1) {
+  .project :where(.heading1) {
     font-size: 50px;
   }
 }
