--- a/hardric portfolio/style/css/nav.css
+++ b/hardric portfolio/style/css/nav.css
@@ -57,7 +57,7 @@
 
 .navigation :where(.nav-brand) a {
   display: flex;
-  padding: 1rem;
+  padding: 1rem 2rem;
   color: grey;
 }
 .navigation :where(.nav-brand) a:hover {
@@ -66,7 +66,7 @@
 
 .navigation :where(.nav-links) a {
   display: flex;
-  padding: 1rem;
+  padding: 1rem 2rem;
   color: grey;
 }
 
